--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.2",
         "maatwebsite/excel": "^3.1",
+        "nesbot/carbon": "^2.39",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
