--- a/storage/app/public/.gitignore
+++ b/storage/app/public/.gitignore
@@ -1,2 +1,13 @@
-*
-!.gitignore
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+.gitignore
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
