--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /node_modules
 /public/hot
+/public/storage
 /storage/*.key
 /vendor
 .env
@@ -10,4 +11,5 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-vendor
+composer.lock
+package-lock.json
